examples/appmesh/cluster/v1beta2/virtualservice.yaml
# SPDX-FileCopyrightText: 2024 The Crossplane Authors <https://crossplane.io>
#
# SPDX-License-Identifier: Apache-2.0

apiVersion: appmesh.aws.upbound.io/v1beta2
kind: VirtualService
metadata:
  annotations:
    meta.upbound.io/example-id: appmesh/v1beta2/virtualservice
  labels:
    testing.upbound.io/example-name: servicea
  name: servicea
spec:
  forProvider:
    meshNameSelector:
      matchLabels:
        testing.upbound.io/example-name: simple
    name: servicea.simpleapp.local
    region: us-west-1
    spec:
      provider:
        virtualNode:
          virtualNodeNameSelector:
            matchLabels:
              testing.upbound.io/example-name: serviceb1
